additional design for page 2

--- a/index.html
+++ b/index.html
@@ -47,17 +47,18 @@
     <!-- Main Section -->
     <section class="main">
       <div class="container">
-        <!-- <div class="row"> -->
-        <div id="summerpop" class="container">
-          <h2>Summer Pop</h2>
-          <p class="lorem">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elitsed
-            doeiusmod temporincidinunt ut labore et dolore magna
-            essentialeoculis.
-          </p>
-          <a href="" class="readMore">Read More</a>
+        <div class="row">
+          <div class="col"></div>
+          <div id="summerpop" class="col">
+            <h2>Summer Pop</h2>
+            <p class="lorem">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elitsed
+              doeiusmod temporincidinunt ut labore et dolore magna
+              essentialeoculis.
+            </p>
+            <a href="/index2.html" class="readMore">Read More</a>
+          </div>
         </div>
-        <!-- </div> -->
       </div>
     </section>
     <!-- End of Main Section -->
