--- a/index2.html
+++ b/index2.html
@@ -103,15 +103,15 @@
     <section id="last2nd" class="p-5">
       <div class="container">
         <div class="row">
-          <div class="col">
+          <div class="col text-center">
             <h5>Lorem ipsum dolor sit</h5>
             <p>Trips / 16th March, 2019</p>
           </div>
-          <div class="col">
+          <div class="col text-center">
             <h5>Lorem ipsum dolor sit</h5>
             <p>Trips / 16th March, 2019</p>
           </div>
-          <div class="col">
+          <div class="col text-center">
             <h5>Lorem ipsum dolor sit</h5>
             <p>Trips / 16th March, 2019</p>
           </div>
@@ -119,6 +119,58 @@
       </div>
     </section>
     <!-- End of Another section -->
+
+    <!-- David Johnson Section -->
+    <section id="davidjohnson">
+      <div class="container text-center">
+        <img class="triangle" src="/images/test9.png" alt="" />
+        <img class="circle" src="/images/test6.png" alt="" />
+        <img class="spiral" src="/images/test8.png" alt="" />
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiuysmod tempor incididunt ut labore et dolore magna alique. Ut enim
+          ad minim veniam, quis.
+        </p>
+        <h5>David Johnson</h5>
+      </div>
+    </section>
+    <!-- End of David Johnson Section -->
+
+    <!-- footer for the 1st website/page -->
+    <section id="last" class="p-5">
+      <div class="container">
+        <img class="palm1" src="/images/test4.png" alt="" />
+        <img class="palm2" src="/images/test3.png" alt="" />
+        <div id="lastPage">
+          <div class="row">
+            <div class="col">
+              <h5>We use less water</h5>
+              <p>
+                Lorem ipsum dolor sit amet, consecte sectetur adipisicing elit,
+                tation omne ullamco laboris nisi ut aliqolore.
+              </p>
+            </div>
+            <div class="col order-5">
+              <h5>We respect nature</h5>
+              <p>
+                Lorem ipsum dolor sit amet, consecte sectetur adipisicing elit,
+                tation omne ullamco laboris nisi ut aliqolore.
+              </p>
+            </div>
+            <div class="col order-1">
+              <h5>We believe in recycling</h5>
+              <p>
+                Lorem ipsum dolor sit amet, consecte sectetur adipisicing elit,
+                tation omne ullamco laboris nisi ut aliqolore.
+              </p>
+            </div>
+          </div>
+        </div>
+        <img class="palm3" src="/images/test1.png" alt="" />
+        <img class="palm4" src="/images/test2.png" alt="" />
+      </div>
+    </section>
+    <!-- footer for the 1st website/page -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
