--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
   </head>
   <body>
     <!-- Header Section -->
+
     <section id="header">
       <div class="container-fluid">
         <div class="navbar navbar-expand-lg navbar-dark">
           <div class="container">
-            <a href="#" class="navbar-brand logo">
-              <img src="/images/logo.jpg" alt=""
-            /></a>
+            <a href="#" class="navbar-brand">
+              <ion-icon name="menu-outline"></ion-icon
+            ></a>
             <div>
               <ul class="navbar-nav ms-auto">
                 <li class="nav-items">
@@ -46,7 +47,24 @@
 
     <!-- Main Section -->
     <section class="main">
+      <!-- Objects -->
+      <img class="style1" src="/images/test6.png" alt="" />
+      <img class="style2" src="/images/test6.png" alt="" />
+      <img class="style3" src="/images/test6.png" alt="" />
+      <img class="style4" src="/images/test6.png" alt="" />
+      <img class="style5" src="/images/test5.png" alt="" />
+      <img class="style6" src="/images/test5.png" alt="" />
+      <img class="style7" src="/images/test7.png" alt="" />
+      <img class="style8" src="/images/test7.png" alt="" />
+      <img class="style9" src="/images/test8.png" alt="" />
+      <img class="style10" src="/images/test8.png" alt="" />
+      <img class="style11" src="/images/test9.png" alt="" />
+      <img class="style12" src="/images/test9.png" alt="" />
+      <img class="style13" src="/images/test10.png" alt="" />
+      <img class="style14" src="/images/test10.png" alt="" />
       <div class="container">
+        <!-- End Objects -->
+
         <div class="row">
           <div class="col"></div>
           <div id="summerpop" class="col">
@@ -61,27 +79,26 @@
         </div>
       </div>
     </section>
+
     <!-- End of Main Section -->
 
     <!-- WHO ARE WE Section -->
-    <section class="p-3 text-center">
-      <div class="container">
-        <div id="learn" class="col-md p-5">
-          <h2>WHO ARE WE</h2>
-          <div id="parag" class="container">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur. Excepteur sint occaecat cupidatat
-            </p>
-          </div>
-        </div>
+    <section id="sameObject">
+      <div class="container text-center">
+        <img class="triangle" src="/images/test9.png" alt="" />
+        <img class="circle" src="/images/test6.png" alt="" />
+        <img class="spiral" src="/images/test8.png" alt="" />
+        <h2>WHO ARE WE</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat
+        </p>
       </div>
     </section>
-
     <!-- End of WHO ARE WE Section -->
 
     <!-- 3 images row -->
@@ -163,6 +180,14 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
+    ></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
   </body>
 </html>
