--- a/index2.html
+++ b/index2.html
@@ -14,20 +14,22 @@
     <title>Page 2 - Read More</title>
   </head>
   <body>
+
     <!-- First Section -->
-    <section class="secondpage">
+    <section  class="secondpage">
       <div class="container">
-        <div id="pagetwo" class="row">
-          <div class="col"></div>
-          <div id="tickets" class="col">
+        <div class="row g-0">
+          <div class="container col-sm-6 col-md-8" ></div>
+          <div id="tickets" class="col-6 col-md-4">
             <h2>Buy your tickets</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
-              adipisci aliquam culpa quasi vitae repellat molestiae perspiciatis
-              laudantium.
-            </p>
-            <a href="" class="here">Here</a>
-          </div>
+            <div class="col">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
+                adipisci aliquam culpa quasi vitae repellat molestiae perspiciatis
+                laudantium.
+              </p>
+            </div>
+            <a href="" class="here">Here</a></div>
         </div>
       </div>
     </section>
@@ -35,10 +37,15 @@
 
     <!-- 3 images row/column -->
     <!-- Image1 -->
-    <section class="p-5">
+    <section id="obj" class="p-5">
       <div class="container">
+        <img class="obj1" src="/images/test5.png" alt="">
+        <img class="obj2"  src="/images/test6.png" alt="">
+        <img  class="obj3" src="/images/test7.png" alt="">
+        <img class="obj4" src="/images/test8.png" alt="">
+        <img class="obj5" src="/images/test9.png" alt="">
         <div class="row align-items-center justify-content-between">
-          <div class="col-md">
+          <div class="col-md text-center">
             <p>Projects / 20th August</p>
             <h3>Something new has just arrived</h3>
             <p>
@@ -61,7 +68,7 @@
           <div class="col-md p-5">
             <img src="/images/img15.jpg" alt="" />
           </div>
-          <div class="col-md">
+          <div class="col-md text-center">
             <p>Projects / 20th August</p>
             <h3>Something new has just arrived</h3>
             <p>
@@ -79,7 +86,7 @@
 
       <div class="container">
         <div class="row align-items-center justify-content-between">
-          <div class="col-md">
+          <div class="col-md text-center">
             <p>Projects / 20th August</p>
             <h3>Something new has just arrived</h3>
             <p>
@@ -102,6 +109,7 @@
     <!-- Another section -->
     <section id="last2nd" class="p-5">
       <div class="container">
+        <img class="spiral1" src="/images/test8.png" alt="" />
         <div class="row">
           <div class="col text-center">
             <h5>Lorem ipsum dolor sit</h5>
@@ -121,11 +129,10 @@
     <!-- End of Another section -->
 
     <!-- David Johnson Section -->
-    <section id="davidjohnson">
+    <section id="sameObject">
       <div class="container text-center">
         <img class="triangle" src="/images/test9.png" alt="" />
         <img class="circle" src="/images/test6.png" alt="" />
-        <img class="spiral" src="/images/test8.png" alt="" />
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiuysmod tempor incididunt ut labore et dolore magna alique. Ut enim
@@ -136,33 +143,47 @@
     </section>
     <!-- End of David Johnson Section -->
 
-    <!-- footer for the 1st website/page -->
+    <!-- footer for the 2nd website/page -->
     <section id="last" class="p-5">
       <div class="container">
         <img class="palm1" src="/images/test4.png" alt="" />
         <img class="palm2" src="/images/test3.png" alt="" />
-        <div id="lastPage">
+        <div class="lastsecondpage">
           <div class="row">
-            <div class="col">
-              <h5>We use less water</h5>
-              <p>
-                Lorem ipsum dolor sit amet, consecte sectetur adipisicing elit,
-                tation omne ullamco laboris nisi ut aliqolore.
+            <div id="socialMedia" class="col-6">
+              <h5>About</h5>
+              <p >
+                Lorem ipsum dolor sit amet, consec </br> tetur adipisicing elit, sed
+                do eiusmod.
               </p>
+              <!-- <div class="soc"> -->
+               <a href=""><ion-icon name="logo-facebook"></ion-icon></a> 
+               <a href=""><ion-icon name="logo-instagram"></ion-icon></a> 
+               <a href=""><ion-icon name="logo-twitter"></ion-icon></a>
+               <a href=""><ion-icon name="logo-youtube"></ion-icon></a>
+               <a href=""><ion-icon name="logo-snapchat"></ion-icon></a>
+              <!-- </div> -->
             </div>
-            <div class="col order-5">
-              <h5>We respect nature</h5>
-              <p>
-                Lorem ipsum dolor sit amet, consecte sectetur adipisicing elit,
-                tation omne ullamco laboris nisi ut aliqolore.
-              </p>
+            <div id="socialMedia"class="col">
+              <h5>About</h5>
+                <p>Team</br>
+                Join us </br>
+                Ethic </br>
+                Goals</p>
             </div>
-            <div class="col order-1">
-              <h5>We believe in recycling</h5>
-              <p>
-                Lorem ipsum dolor sit amet, consecte sectetur adipisicing elit,
-                tation omne ullamco laboris nisi ut aliqolore.
-              </p>
+            <div id="socialMedia"  class="col">
+              <h5>About</h5>
+              <p>Team</br>
+                Join us </br>
+                Ethic </br>
+                Goals</p>
+            </div>
+            <div  id="socialMedia" class="col">
+              <h5>About</h5>
+              <p>Team</br>
+                Join us </br>
+                Ethic </br>
+                Goals</p>
             </div>
           </div>
         </div>
@@ -170,7 +191,7 @@
         <img class="palm4" src="/images/test2.png" alt="" />
       </div>
     </section>
-    <!-- footer for the 1st website/page -->
+    <!-- footer for the 2nd website/page -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -186,5 +207,7 @@
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
