edit the Text Here section and the SocMed logo in the 2nd page footer

--- a/index.html
+++ b/index.html
@@ -115,15 +115,17 @@
             <img src="/images/img6.jpg" alt="" />
           </div>
         </div>
-        <div class="row p-5">
-          <div class="col-md-4">
-            <a href="" class="yourText">Your Text Here</a>
-          </div>
-          <div class="col-md-4">
-            <a href="" class="yourText">Your Text Here</a>
-          </div>
-          <div class="col-md-4">
-            <a href="" class="yourText">Your Text Here</a>
+        <div id="yourtext" class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <a href="" class="yourText">Your Text Here</a>
+            </div>
+            <div class="col-md-4">
+              <a href="" class="yourText">Your Text Here</a>
+            </div>
+            <div class="col-md-4 align-items-">
+              <a href="" class="yourText">Your Text Here</a>
+            </div>
           </div>
         </div>
       </div>
