--- a/index2.html
+++ b/index2.html
@@ -157,11 +157,11 @@
                 do eiusmod.
               </p>
               <!-- <div class="soc"> -->
-               <a href=""><ion-icon name="logo-facebook"></ion-icon></a> 
-               <a href=""><ion-icon name="logo-instagram"></ion-icon></a> 
-               <a href=""><ion-icon name="logo-twitter"></ion-icon></a>
-               <a href=""><ion-icon name="logo-youtube"></ion-icon></a>
-               <a href=""><ion-icon name="logo-snapchat"></ion-icon></a>
+               <a href=""><ion-icon class="p-2" name="logo-facebook"></ion-icon></a> 
+               <a href=""><ion-icon  class="p-2" name="logo-instagram"></ion-icon></a> 
+               <a href=""><ion-icon class="p-2" name="logo-twitter"></ion-icon></a>
+               <a href=""><ion-icon class="p-2" name="logo-youtube"></ion-icon></a>
+               <a href=""><ion-icon class="p-2" name="logo-snapchat"></ion-icon></a>
               <!-- </div> -->
             </div>
             <div id="socialMedia"class="col">
