--- a/index.html
+++ b/index.html
@@ -10,20 +10,64 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/style.css" />
     <title>Website Design Activity 2</title>
   </head>
   <body>
     <!-- Header Section -->
 
-    <section id="header">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="#">Frontend</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#menu"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="menu">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-items">
+              <a href="#home" class="nav-link" id="home">Home</a>
+            </li>
+            <li class="nav-items">
+              <a href="#about" class="nav-link">About</a>
+            </li>
+            <li class="nav-items">
+              <a href="#shop" class="nav-link">Shop</a>
+            </li>
+            <li class="nav-items">
+              <a href="#contact" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- <section id="header">
       <div class="container-fluid">
-        <div class="navbar navbar-expand-lg navbar-dark">
-          <div class="container">
-            <a href="#" class="navbar-brand">
+        <div class="navbar navbar-expand-sm navbar-dark">
+         <div class="container">  -->
+    <!-- <a href="#" class="navbar-brand">
               <ion-icon name="menu-outline"></ion-icon
-            ></a>
-            <div>
+            ></a> -->
+    <!-- <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navmenu"
+            >
+              <span class="navbar-togller-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navmenu">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-items">
                   <a href="#home" class="nav-link" id="home">Home</a>
@@ -42,7 +86,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End of Header Section -->
 
     <!-- Main Section -->
@@ -102,38 +146,34 @@
     <!-- End of WHO ARE WE Section -->
 
     <!-- 3 images row -->
-    <section class="p-5">
+    <!-- <section class="p-5">
       <div class="container">
-        <div class="row">
+        <div class="row g-5 p-5">
           <div class="col-md-4">
             <img src="/images/img4.jpg" alt="" />
+            <div class="col p-4">
+              <a href="" class="yourText">Your Text Here</a>
+            </div>
           </div>
           <div class="col-md-4">
             <img src="/images/img5.jpg" alt="" />
+            <div class="col p-4">
+              <a href="" class="yourText">Your Text Here</a>
+            </div>
           </div>
           <div class="col-md-4">
             <img src="/images/img6.jpg" alt="" />
-          </div>
-        </div>
-        <div id="yourtext" class="container">
-          <div class="row">
-            <div class="col-md-4">
-              <a href="" class="yourText">Your Text Here</a>
-            </div>
-            <div class="col-md-4">
-              <a href="" class="yourText">Your Text Here</a>
-            </div>
-            <div class="col-md-4 align-items-">
+            <div class="col p-4">
               <a href="" class="yourText">Your Text Here</a>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End of 3 images row -->
 
     <!-- footer for the 1st website/page -->
-    <section id="last" class="p-5">
+    <!-- <section id="last" class="p-5">
       <div class="container">
         <img class="palm1" src="/images/test4.png" alt="" />
         <img class="palm2" src="/images/test3.png" alt="" />
@@ -165,31 +205,7 @@
         <img class="palm3" src="/images/test1.png" alt="" />
         <img class="palm4" src="/images/test2.png" alt="" />
       </div>
-    </section>
+    </section> -->
     <!-- footer for the 1st website/page -->
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
   </body>
 </html>
