additional media max-width 768px for mobile devices

--- a/index.html
+++ b/index.html
@@ -20,37 +20,38 @@
   </head>
   <body>
     <!-- Header Section -->
+    <div class="masthead" style="background-image: url('./images/img1.jpg')">
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+          <a class="navbar-brand" href="#">Frontend</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#menu"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-      <div class="container">
-        <a class="navbar-brand" href="#">Frontend</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#menu"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="menu">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-items">
-              <a href="#home" class="nav-link" id="home">Home</a>
-            </li>
-            <li class="nav-items">
-              <a href="#about" class="nav-link">About</a>
-            </li>
-            <li class="nav-items">
-              <a href="#shop" class="nav-link">Shop</a>
-            </li>
-            <li class="nav-items">
-              <a href="#contact" class="nav-link">Contact</a>
-            </li>
-          </ul>
+          <div class="collapse navbar-collapse" id="menu">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-items">
+                <a href="#home" class="nav-link" id="home">Home</a>
+              </li>
+              <li class="nav-items">
+                <a href="#about" class="nav-link">About</a>
+              </li>
+              <li class="nav-items">
+                <a href="#shop" class="nav-link">Shop</a>
+              </li>
+              <li class="nav-items">
+                <a href="#contact" class="nav-link">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
 
     <!-- <section id="header">
       <div class="container-fluid">
@@ -90,9 +91,9 @@
     <!-- End of Header Section -->
 
     <!-- Main Section -->
-    <section class="main">
-      <!-- Objects -->
-      <img class="style1" src="/images/test6.png" alt="" />
+    <!-- <section class="main"> -->
+    <!-- Objects -->
+    <!-- <img class="style1" src="/images/test6.png" alt="" />
       <img class="style2" src="/images/test6.png" alt="" />
       <img class="style3" src="/images/test6.png" alt="" />
       <img class="style4" src="/images/test6.png" alt="" />
@@ -106,10 +107,10 @@
       <img class="style12" src="/images/test9.png" alt="" />
       <img class="style13" src="/images/test10.png" alt="" />
       <img class="style14" src="/images/test10.png" alt="" />
-      <div class="container">
-        <!-- End Objects -->
+      <div class="container"> -->
+    <!-- End Objects -->
 
-        <div class="row">
+    <!-- <div class="row">
           <div class="col"></div>
           <div id="summerpop" class="col">
             <h2>Summer Pop</h2>
@@ -122,12 +123,12 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- End of Main Section -->
 
     <!-- WHO ARE WE Section -->
-    <section id="sameObject">
+    <!-- <section id="sameObject">
       <div class="container text-center">
         <img class="triangle" src="/images/test9.png" alt="" />
         <img class="circle" src="/images/test6.png" alt="" />
@@ -142,7 +143,7 @@
           pariatur. Excepteur sint occaecat cupidatat
         </p>
       </div>
-    </section>
+    </section> -->
     <!-- End of WHO ARE WE Section -->
 
     <!-- 3 images row -->
