display the description in the main website but not yet responsive

--- a/index.html
+++ b/index.html
@@ -51,79 +51,42 @@
           </div>
         </div>
       </nav>
-    </div>
 
-    <!-- <section id="header">
-      <div class="container-fluid">
-        <div class="navbar navbar-expand-sm navbar-dark">
-         <div class="container">  -->
-    <!-- <a href="#" class="navbar-brand">
-              <ion-icon name="menu-outline"></ion-icon
-            ></a> -->
-    <!-- <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navmenu"
-            >
-              <span class="navbar-togller-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navmenu">
-              <ul class="navbar-nav ms-auto">
-                <li class="nav-items">
-                  <a href="#home" class="nav-link" id="home">Home</a>
-                </li>
-                <li class="nav-items">
-                  <a href="#about" class="nav-link">About</a>
-                </li>
-                <li class="nav-items">
-                  <a href="#shop" class="nav-link">Shop</a>
-                </li>
-                <li class="nav-items">
-                  <a href="#contact" class="nav-link">Contact</a>
-                </li>
-              </ul>
+      <!-- Main Section -->
+      <div class="container">
+        <!-- Objects -->
+        <img class="style1" src="/images/test6.png" alt="" />
+        <img class="style2" src="/images/test6.png" alt="" />
+        <img class="style3" src="/images/test6.png" alt="" />
+        <img class="style4" src="/images/test6.png" alt="" />
+        <img class="style5" src="/images/test5.png" alt="" />
+        <img class="style6" src="/images/test5.png" alt="" />
+        <img class="style7" src="/images/test7.png" alt="" />
+        <img class="style8" src="/images/test7.png" alt="" />
+        <img class="style9" src="/images/test8.png" alt="" />
+        <img class="style10" src="/images/test8.png" alt="" />
+        <img class="style11" src="/images/test9.png" alt="" />
+        <img class="style12" src="/images/test9.png" alt="" />
+        <img class="style13" src="/images/test10.png" alt="" />
+        <img class="style14" src="/images/test10.png" alt="" />
+        <div class="container">
+          <!-- End Objects -->
+
+          <div class="row">
+            <div class="col"></div>
+            <div id="summerpop" class="col">
+              <h2>Summer Pop</h2>
+              <p class="lorem">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elitsed
+                doeiusmod temporincidinunt ut labore et dolore magna
+                essentialeoculis.
+              </p>
+              <a href="/index2.html" class="readMore">Read More</a>
             </div>
           </div>
         </div>
       </div>
-    </section> -->
-    <!-- End of Header Section -->
-
-    <!-- Main Section -->
-    <!-- <section class="main"> -->
-    <!-- Objects -->
-    <!-- <img class="style1" src="/images/test6.png" alt="" />
-      <img class="style2" src="/images/test6.png" alt="" />
-      <img class="style3" src="/images/test6.png" alt="" />
-      <img class="style4" src="/images/test6.png" alt="" />
-      <img class="style5" src="/images/test5.png" alt="" />
-      <img class="style6" src="/images/test5.png" alt="" />
-      <img class="style7" src="/images/test7.png" alt="" />
-      <img class="style8" src="/images/test7.png" alt="" />
-      <img class="style9" src="/images/test8.png" alt="" />
-      <img class="style10" src="/images/test8.png" alt="" />
-      <img class="style11" src="/images/test9.png" alt="" />
-      <img class="style12" src="/images/test9.png" alt="" />
-      <img class="style13" src="/images/test10.png" alt="" />
-      <img class="style14" src="/images/test10.png" alt="" />
-      <div class="container"> -->
-    <!-- End Objects -->
-
-    <!-- <div class="row">
-          <div class="col"></div>
-          <div id="summerpop" class="col">
-            <h2>Summer Pop</h2>
-            <p class="lorem">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elitsed
-              doeiusmod temporincidinunt ut labore et dolore magna
-              essentialeoculis.
-            </p>
-            <a href="/index2.html" class="readMore">Read More</a>
-          </div>
-        </div>
-      </div>
-    </section> -->
+    </div>
 
     <!-- End of Main Section -->
 
