responsive website for max-width: 768px

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
     <div class="masthead" style="background-image: url('./images/img1.jpg')">
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">Frontend</a>
           <button
-            class="navbar-toggler"
+            class="navbar-toggler navbar-toggler-right"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#menu"
@@ -53,8 +52,8 @@
       </nav>
 
       <!-- Main Section -->
-      <div class="container">
-        <!-- Objects -->
+      <!-- Objects -->
+      <div id="objectMain" class="container">
         <img class="style1" src="/images/test6.png" alt="" />
         <img class="style2" src="/images/test6.png" alt="" />
         <img class="style3" src="/images/test6.png" alt="" />
@@ -69,20 +68,20 @@
         <img class="style12" src="/images/test9.png" alt="" />
         <img class="style13" src="/images/test10.png" alt="" />
         <img class="style14" src="/images/test10.png" alt="" />
-        <div class="container">
-          <!-- End Objects -->
+      </div>
 
-          <div class="row">
-            <div class="col"></div>
-            <div id="summerpop" class="col">
-              <h2>Summer Pop</h2>
-              <p class="lorem">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elitsed
-                doeiusmod temporincidinunt ut labore et dolore magna
-                essentialeoculis.
-              </p>
-              <a href="/index2.html" class="readMore">Read More</a>
-            </div>
+      <!-- End Objects -->
+      <div class="container">
+        <div class="row">
+          <div class="col"></div>
+          <div id="summerpop" class="col">
+            <h2>Summer Pop</h2>
+            <p class="lorem">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elitsed
+              doeiusmod temporincidinunt ut labore et dolore magna
+              essentialeoculis.
+            </p>
+            <a href="/index2.html" class="readMore">Read More</a>
           </div>
         </div>
       </div>
@@ -91,7 +90,7 @@
     <!-- End of Main Section -->
 
     <!-- WHO ARE WE Section -->
-    <!-- <section id="sameObject">
+    <section id="sameObject">
       <div class="container text-center">
         <img class="triangle" src="/images/test9.png" alt="" />
         <img class="circle" src="/images/test6.png" alt="" />
@@ -106,26 +105,26 @@
           pariatur. Excepteur sint occaecat cupidatat
         </p>
       </div>
-    </section> -->
+    </section>
     <!-- End of WHO ARE WE Section -->
 
     <!-- 3 images row -->
-    <!-- <section class="p-5">
+    <section class="p-5">
       <div class="container">
-        <div class="row g-5 p-5">
-          <div class="col-md-4">
+        <div class="row g-3">
+          <div class="col-12 col-md-6 col-lg-4">
             <img src="/images/img4.jpg" alt="" />
             <div class="col p-4">
               <a href="" class="yourText">Your Text Here</a>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-12 col-md-6 col-lg-4">
             <img src="/images/img5.jpg" alt="" />
             <div class="col p-4">
               <a href="" class="yourText">Your Text Here</a>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-12 col-md-6 col-lg-4">
             <img src="/images/img6.jpg" alt="" />
             <div class="col p-4">
               <a href="" class="yourText">Your Text Here</a>
@@ -133,31 +132,31 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- End of 3 images row -->
 
     <!-- footer for the 1st website/page -->
-    <!-- <section id="last" class="p-5">
+    <section id="last">
       <div class="container">
         <img class="palm1" src="/images/test4.png" alt="" />
         <img class="palm2" src="/images/test3.png" alt="" />
         <div id="lastPage">
-          <div class="row">
-            <div class="col">
+          <div class="row g-3">
+            <div class="col-12 col-md-6 col-lg-4">
               <h5>We use less water</h5>
               <p>
                 Lorem ipsum dolor sit amet, consecte sectetur adipisicing elit,
                 tation omne ullamco laboris nisi ut aliqolore.
               </p>
             </div>
-            <div class="col order-5">
+            <div class="col-12 col-md-6 col-lg-4">
               <h5>We respect nature</h5>
               <p>
                 Lorem ipsum dolor sit amet, consecte sectetur adipisicing elit,
                 tation omne ullamco laboris nisi ut aliqolore.
               </p>
             </div>
-            <div class="col order-1">
+            <div class="col-12 col-md-6 col-lg-4">
               <h5>We believe in recycling</h5>
               <p>
                 Lorem ipsum dolor sit amet, consecte sectetur adipisicing elit,
@@ -169,7 +168,7 @@
         <img class="palm3" src="/images/test1.png" alt="" />
         <img class="palm4" src="/images/test2.png" alt="" />
       </div>
-    </section> -->
+    </section>
     <!-- footer for the 1st website/page -->
   </body>
 </html>
