--- a/index2.html
+++ b/index2.html
@@ -14,38 +14,31 @@
     <title>Page 2 - Read More</title>
   </head>
   <body>
-
     <!-- First Section -->
-    <section  class="secondpage">
+    <div class="secondpage" style="background-image: url('./images/img13.jpg')">
       <div class="container">
-        <div class="row g-0">
-          <div class="container col-sm-6 col-md-8" ></div>
-          <div id="tickets" class="col-6 col-md-4">
+        <div class="row">
+          <div class="col"></div>
+          <div id="summerpop" class="col">
             <h2>Buy your tickets</h2>
-            <div class="col">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
-                adipisci aliquam culpa quasi vitae repellat molestiae perspiciatis
-                laudantium.
-              </p>
-            </div>
-            <a href="" class="here">Here</a></div>
+            <p class="lorem">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
+              adipisci aliquam culpa quasi vitae repellat molestiae perspiciatis
+              laudantium.
+            </p>
+            <a href="/index2.html" class="here">Here</a>
+          </div>
         </div>
       </div>
-    </section>
+    </div>
     <!-- End of First Section -->
 
     <!-- 3 images row/column -->
     <!-- Image1 -->
     <section id="obj" class="p-5">
       <div class="container">
-        <img class="obj1" src="/images/test5.png" alt="">
-        <img class="obj2"  src="/images/test6.png" alt="">
-        <img  class="obj3" src="/images/test7.png" alt="">
-        <img class="obj4" src="/images/test8.png" alt="">
-        <img class="obj5" src="/images/test9.png" alt="">
         <div class="row align-items-center justify-content-between">
-          <div class="col-md text-center">
+          <div class="col-md text-center p-5">
             <p>Projects / 20th August</p>
             <h3>Something new has just arrived</h3>
             <p>
@@ -55,20 +48,31 @@
               essentiale dolor liquam.
             </p>
           </div>
-          <div class="col-md p-5">
-            <img src="/images/img14.jpg" alt="" />
+          <div class="col-md p-3">
+            <img src="/images/img14.jpg" class="img-fluid" alt="" />
+            <img
+              class="float-end"
+              src="/images/test6.png"
+              width="65"
+              height="54"
+              alt="#"
+            />
           </div>
         </div>
       </div>
+
       <!-- End of Image1 -->
 
       <!-- Image 2 -->
       <div class="container">
+        <img class="obj4" src="/images/test8.png" alt="" />
+        <img class="obj5" src="/images/test9.png" alt="" />
+        <img class="mx-auto d-block" src="/images/test5.png" alt="" />
         <div class="row align-items-center justify-content-between">
-          <div class="col-md p-5">
-            <img src="/images/img15.jpg" alt="" />
+          <div class="col-md p-3">
+            <img src="/images/img15.jpg" class="img-fluid" alt="" />
           </div>
-          <div class="col-md text-center">
+          <div class="col-md p-5 text-center">
             <p>Projects / 20th August</p>
             <h3>Something new has just arrived</h3>
             <p>
@@ -83,10 +87,9 @@
       <!-- End of Image 2 -->
 
       <!-- Image 3 -->
-
       <div class="container">
         <div class="row align-items-center justify-content-between">
-          <div class="col-md text-center">
+          <div class="col-md p-5">
             <p>Projects / 20th August</p>
             <h3>Something new has just arrived</h3>
             <p>
@@ -96,13 +99,18 @@
               essentiale dolor liquam.
             </p>
           </div>
-          <div class="col-md p-5">
-            <img src="/images/img16.jpg" alt="" />
+          <div class="col-md p-3">
+            <img
+              class="float-end"
+              width="260"
+              height="130"
+              src="/images/test7.png"
+              alt=""
+            />
+            <img src="/images/img16.jpg" class="img-fluid" alt="" />
           </div>
         </div>
       </div>
-
-      <!-- End of Image 3 -->
     </section>
     <!-- End of 3 images row/column -->
 
@@ -110,16 +118,16 @@
     <section id="last2nd" class="p-5">
       <div class="container">
         <img class="spiral1" src="/images/test8.png" alt="" />
-        <div class="row">
-          <div class="col text-center">
+        <div class="row g-3">
+          <div class="col-12 col-md-6 col-lg-4">
             <h5>Lorem ipsum dolor sit</h5>
             <p>Trips / 16th March, 2019</p>
           </div>
-          <div class="col text-center">
+          <div class="col-12 col-md-6 col-lg-4">
             <h5>Lorem ipsum dolor sit</h5>
             <p>Trips / 16th March, 2019</p>
           </div>
-          <div class="col text-center">
+          <div class="col-12 col-md-6 col-lg-4">
             <h5>Lorem ipsum dolor sit</h5>
             <p>Trips / 16th March, 2019</p>
           </div>
@@ -150,19 +158,19 @@
         <img class="palm2" src="/images/test3.png" alt="" />
         <div class="lastsecondpage">
           <div class="row">
-            <div id="socialMedia" class="col-6">
+            <div id="socialMedia" class="col-12 col-md-6 col-lg-4">
               <h5>About</h5>
               <p >
                 Lorem ipsum dolor sit amet, consec </br> tetur adipisicing elit, sed
                 do eiusmod.
               </p>
-              <!-- <div class="soc"> -->
+             
                <a href=""><ion-icon class="p-2" name="logo-facebook"></ion-icon></a> 
                <a href=""><ion-icon  class="p-2" name="logo-instagram"></ion-icon></a> 
                <a href=""><ion-icon class="p-2" name="logo-twitter"></ion-icon></a>
                <a href=""><ion-icon class="p-2" name="logo-youtube"></ion-icon></a>
                <a href=""><ion-icon class="p-2" name="logo-snapchat"></ion-icon></a>
-              <!-- </div> -->
+         
             </div>
             <div id="socialMedia"class="col">
               <h5>About</h5>
@@ -207,7 +215,13 @@
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
