additional breakpoints @media(max-width:614px, 992px and 1199px)

--- a/index.html
+++ b/index.html
@@ -113,19 +113,19 @@
       <div class="container">
         <div class="row g-3">
           <div class="col-12 col-md-6 col-lg-4">
-            <img src="/images/img4.jpg" alt="" />
+            <img class="img-fluid" src="/images/img4.jpg" alt="" />
             <div class="col p-4">
               <a href="" class="yourText">Your Text Here</a>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
-            <img src="/images/img5.jpg" alt="" />
+            <img class="img-fluid" src="/images/img5.jpg" alt="" />
             <div class="col p-4">
               <a href="" class="yourText">Your Text Here</a>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
-            <img src="/images/img6.jpg" alt="" />
+            <img class="img-fluid" src="/images/img6.jpg" alt="" />
             <div class="col p-4">
               <a href="" class="yourText">Your Text Here</a>
             </div>
